# MusicRemix

./: .gitignore  README.md  pyproject.toml  setup.bat  setup.sh  start.bat  start.command
docs/: licenses.md  tuning.md
models/: README.md
openspec/changes/add-vocal-timbre-transfer/: design.md  proposal.md  tasks.md
openspec/changes/add-vocal-timbre-transfer/specs/reference-voice-modeling/: spec.md
openspec/changes/add-vocal-timbre-transfer/specs/song-remix-pipeline/: spec.md
openspec/changes/add-vocal-timbre-transfer/specs/timbre-transfer/: spec.md
openspec/changes/add-vocal-timbre-transfer/specs/vocal-extraction/: spec.md
scripts/: make_base_model.py  patch_rvc_infer.py
src/musicremix/: __init__.py  cli.py  config.py  pipeline.py  training.py
src/musicremix/conversion/: __init__.py  base.py  rvc_converter.py
src/musicremix/modeling/: __init__.py  base.py  rvc_modeler.py
src/musicremix/remix/: __init__.py  base.py  mixer.py
src/musicremix/separation/: __init__.py  base.py  demucs.py
src/musicremix/utils/: audio.py  chunking.py  device.py  model_cache.py
src/musicremix/web/: __init__.py  app.py  audius.py  tasks.py
src/musicremix/web/static/: index.html
tests/: conftest.py  test_audio.py  test_chunking.py  test_cli.py  test_conversion.py  test_device.py  test_modeling.py  test_pipeline.py  test_remix.py  test_separation.py
